test/Fail/Issue484.err
Issue484.agda:10.8-13: error: [NotInScope]
Not in scope:
  A.foo at Issue484.agda:10.8-13
    (did you mean 'foo′'?)
when scope checking A.foo
